# okeedoku

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
hooks/: pre-commit
src/okeedoku/: main.py
