[tool.poetry]
name = "okeedoku"
version = "0.1.1"
description = "Happy sudoku solver"
authors = ["Isaac Jackson <mrisaacjackson@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.12.1"
mypy = "^0.812"
ipython = "^7.23.1"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
okeedoku = 'okeedoku.main:main'
