[metadata]
name = okeedoku

[options]
versioning=dev
python_requires = >=3.9
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    typer
    build
    PyYAML

[options.packages.find]
where =
    src

[options.package_data]
okeedoku =
    py.typed
    src/okeedoku/data/*

[options.entry_points]
console_scripts =
    okeedoku = okeedoku.main:main
