[metadata]
name = okeedoku
author = Isaac Jackson
version = 0.0.1
description = A small example package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
versioning=dev
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    pydantic

[options.packages.find]
where =
    src

[options.package_data]
okeedoku =
    src/okeedoku/data/*

[options.entry_points]
console_scripts =
    okeedoku = okeedoku.main:main
